--- a/app/views/partials/contact.textile
+++ b/app/views/partials/contact.textile
@@ -1,3 +1,8 @@
-Email: *tim@tim-perry.co.uk*
+<iframe src="http://githubbadge.appspot.com/pimterry" style="border: 0;height: 142px;width: 200px;overflow: hidden; float: right" frameBorder="0"></iframe>
 
-"Facebook":http://facebook.com/pimterry
+*tim@tim-perry.co.uk*
+
+<a href="https://twitter.com/pimterry" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @pimterry</a>
+<a href="http://uk.linkedin.com/pub/tim-perry/46/103/84b"><img style="margin: 0" src="http://s.c.lnkd.licdn.com/scds/common/u/img/webpromo/btn_myprofile_160x33.png" width="160" height="33" border="0" alt="View Tim Perry's profile on LinkedIn"></a>
+
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
